[测试] 增加对请求参数名称处理的单元测试